[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "media-generator-mcp"
version = "1.0.0"
description = "MCP Server for AI-powered image generation and video animation using OpenRouter (Nano Banana Pro) and fal.ai (Kling 2.6)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Emanuele Mazzi" }
]
keywords = ["mcp", "ai", "image-generation", "video-generation", "openrouter", "gemini", "kling", "fal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "fal-client>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "python-dotenv>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
media-generator-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
